--- a/public/login.html
+++ b/public/login.html
@@ -37,7 +37,7 @@
         </svg>
     </div>
     <!-- ./ logo -->
-
+<p style="display: none" id="login-message" class="text-muted alert alert-success"></p>
     <h5>Sign in</h5>
 
     <!-- form -->
