--- a/public/login.html
+++ b/public/login.html
@@ -47,10 +47,12 @@
         </div>
         <div class="form-group input-group-lg">
             <input type="password" class="form-control" id="password" name="password" placeholder="Password" required>
+            <div id="email-error" class="error-messege ng-star-inserted" style="display: none"> </div>
         </div>
         <div class="form-group d-flex justify-content-between">
             <div class="custom-control custom-checkbox">
                 <input type="checkbox" class="custom-control-input" checked="" id="customCheck1">
+                <div id="password-error" class="error-messege ng-star-inserted" style="display: none"> </div>
                 <label class="custom-control-label" for="customCheck1">Remember me</label>
             </div>
             <a href="/site/reset-password">Reset password</a>
